# physics_researcher

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
apps/api/: pyproject.toml
apps/api/src/autolab/api/: __init__.py  dependencies.py  main.py  schemas.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json
apps/worker/: pyproject.toml
apps/worker/src/autolab/worker/: __init__.py  main.py
benchmarks/meep_adjoint_devices/: benchmark.json
benchmarks/meep_inverse_design/: benchmark.json
benchmarks/meep_photonic_devices/: advanced_benchmark.json  baselines_benchmark.json  benchmark.json  refined_benchmark.json
benchmarks/openmm_lj13_baselines/: benchmark.json
benchmarks/openmm_lj13_cluster/: benchmark.json
benchmarks/openmm_lj13_cluster_refined/: benchmark.json
benchmarks/openmm_lj_pair/: benchmark.json
benchmarks/openmm_lj_pair_longrun/: benchmark.json
benchmarks/openmm_lj_pair_refined_multiseed/: benchmark.json
benchmarks/thermoelectric_measurement/: benchmark.json
docs/adr/: 0001-orchestration-and-simulator-boundary.md
docs/architecture/: literature-research.md  materials-workbench-ui.md  overview.md  peptide-research.md  simulator-workflows.md
docs/benchmarks/: meep_adjoint_devices.md  meep_inverse_design.md  meep_photonic_devices.md  openmm_lj_cluster.md  openmm_lj_pair.md  thermoelectric_measurement.md
docs/playbooks/: local-development.md  materials-positioning.md  materials-skill-and-simulator-roadmap.md  photonics-adjoint-roadmap.md  simulator-integration.md
examples/campaigns/: baseline_conductivity.json  cautious_feasible_search.json  cross_simulator_transfer_verification.json  demo_campaign.json  devsim_to_meep_device_coupling.json  lammps_to_elmer_multiscale_screen.json  longer_horizon_exploration.json  meep_broadband_mode_converter.json  meep_demux_inverse_screen.json  meep_splitter_inverse_screen.json  meep_waveguide_inverse_screen.json  openmm_lj_pair_equilibrium.json  openmm_protein_relaxation.json  process_window_tuning.json  qe_to_lammps_forcefield_bootstrap.json  qe_to_meep_photonic_screen.json  thermoelectric_sim_to_measurement_loop.json  tight_budget_screen.json
examples/configs/: local.json
examples/literature_research/: arxiv_request.json  arxiv_response.json
examples/notebooks/: campaign_analysis.ipynb
examples/peptide_research/: reference_seed_example.csv  reference_seed_example.jsonl  wrinkle_request.json
examples/prompts/: experiment_prompts.md
infra/docker/: Dockerfile  Dockerfile.lammps
infra/observability/: otel-collector-config.yaml
scripts/: build_peptide_reference_dataset.py  generate_meep_photonic_advanced_comparison.py  generate_meep_photonic_benchmark_plots.py  generate_openmm_lj13_baseline_artifacts.py  generate_openmm_lj_benchmark_plots.py  generate_thermoelectric_benchmark_plots.py
skills/devsim-simulation/: SKILL.md
skills/elmer-simulation/: SKILL.md
skills/lammps-simulation/: SKILL.md
skills/meep-simulation/: SKILL.md
skills/openmm-simulation/: SKILL.md
skills/quantum-espresso-simulation/: SKILL.md
src/autolab_workspace/: __init__.py
tests/: conftest.py
(+102 files in other folders)
