[project]
name = "autolab-worker"
version = "0.1.0"
description = "Autolab background worker."
requires-python = ">=3.12,<3.13"
dependencies = [
  "autolab-campaigns",
  "autolab-core",
  "autolab-storage",
  "autolab-telemetry",
  "ray[default]>=2.44.1",
  "redis[hiredis]>=5.2.1",
]

[tool.uv.sources]
autolab-campaigns = { workspace = true }
autolab-core = { workspace = true }
autolab-storage = { workspace = true }
autolab-telemetry = { workspace = true }

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autolab"]
